tests/snapshots/test_runner__tests__compiler__typecheck__unreachable_case_integer_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = (n: Integer): Integer =>
  switch (n) {
    case 0: 0
    case 1: 1
    case 1: 1
    case _: 2
  }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unreachable_case_integer_1.kk:5:10
  │
5 │     case 1: 1
  │          ^ Unreachable case
  │
  = This case is unreachable as it is already handled by previous cases.
